--- a/docs/source/theory/geometrics/radial_metrics.ipynb
+++ b/docs/source/theory/geometrics/radial_metrics.ipynb
@@ -336,43 +336,50 @@
    "outputs": [],
    "source": [
     "def plot_all_radial_metrics(lv, spks, title=\"\"):\n",
-    "    radial_dist_1 = lv.radial_distance(spks, \n",
-    "                                 reduce_by={\"group\", \"name\"},\n",
-    "                                 approach=\"fixed_vector\",\n",
-    "                                 recompute=True, log_level=logging.ERROR)\n",
-    "    radial_dist_2 = lv.radial_distance(spks, \n",
-    "                                    reduce_by={\"group\", \"name\"},\n",
-    "                                    approach=\"moving_vector\",\n",
-    "                                    #  ql=\"\",\n",
-    "                                    recompute=True, log_level=logging.ERROR)\n",
-    "    radial_length_1 = lv.radial_length(spks, \n",
-    "                                    recompute=True, \n",
-    "                                    reduce_by={\"group\", \"name\"},\n",
-    "                                    approach=\"fixed_centers\",\n",
-    "                                    log_level=logging.ERROR)\n",
-    "    radial_length_2 = lv.radial_length(spks, \n",
-    "                                    recompute=True, \n",
-    "                                    reduce_by={\"group\", \"name\"},\n",
-    "                                    approach=\"moving_centers\",\n",
-    "                                    log_level=logging.ERROR)\n",
+    "        timestep = lv.timesteps()\n",
+    "        mask = timestep >=0.1\n",
+    "        \n",
+    "        radial_dist_1 = lv.radial_distance(spks, \n",
+    "                                        reduce_by={\"group\", \"name\"},\n",
+    "                                        approach=\"fixed_vector\",\n",
+    "                                        recompute=True, \n",
+    "                                        log_level=logging.ERROR)[mask]\n",
+    "        radial_dist_2 = lv.radial_distance(spks, \n",
+    "                                        reduce_by={\"group\", \"name\"},\n",
+    "                                        approach=\"moving_vector\",\n",
+    "                                        #  ql=\"\",\n",
+    "                                        recompute=True, \n",
+    "                                        log_level=logging.ERROR)[mask]\n",
+    "        radial_length_1 = lv.radial_length(spks, \n",
+    "                                        recompute=True, \n",
+    "                                        reduce_by={\"group\", \"name\"},\n",
+    "                                        approach=\"fixed_centers\",\n",
+    "                                        log_level=logging.ERROR)[mask]\n",
+    "        radial_length_2 = lv.radial_length(spks, \n",
+    "                                        recompute=True, \n",
+    "                                        reduce_by={\"group\", \"name\"},\n",
+    "                                        approach=\"moving_centers\",\n",
+    "                                        log_level=logging.ERROR)[mask]\n",
+    "        timestep = timestep[mask]\n",
+    "        data = np.hstack([\n",
+    "                        timestep.reshape((-1,1)), \n",
+    "                        radial_dist_1.reshape((-1,1)), \n",
+    "                        radial_dist_2.reshape((-1,1)),\n",
+    "                        radial_length_1.reshape((-1,1)), \n",
+    "                        radial_length_2.reshape((-1,1))\n",
+    "                        ])\n",
+    "        \n",
+    "        import pandas as pd\n",
+    "        \n",
     "\n",
-    "    data = np.hstack([\n",
-    "                    lv.timesteps().reshape((-1,1)), \n",
-    "                    radial_dist_1.reshape((-1,1)), \n",
-    "                    radial_dist_2.reshape((-1,1)),\n",
-    "                    radial_length_1.reshape((-1,1)), \n",
-    "                    radial_length_2.reshape((-1,1))\n",
-    "                    ])\n",
-    "    import pandas as pd\n",
-    "\n",
-    "    df = pd.DataFrame(data,columns=[\n",
-    "            \"timestep\", \n",
-    "            \"radial_distance_fixed_vector\", \n",
-    "            \"radial_distance_moving_vector\", \n",
-    "            \"radial_length_fixed_centers\",\n",
-    "            \"radial_length_moving_centers\",\n",
-    "            ])\n",
-    "    df.plot(x=\"timestep\", figsize=(10,5), grid=True, title=title)"
+    "        df = pd.DataFrame(data,columns=[\n",
+    "                \"timestep\", \n",
+    "                \"radial_distance_fixed_vector\", \n",
+    "                \"radial_distance_moving_vector\", \n",
+    "                \"radial_length_fixed_centers\",\n",
+    "                \"radial_length_moving_centers\",\n",
+    "                ])\n",
+    "        df.plot(x=\"timestep\", figsize=(10,5), grid=True, title=title)"
    ]
   },
   {
