--- a/docs/source/theory/geometrics/radial_metrics.ipynb
+++ b/docs/source/theory/geometrics/radial_metrics.ipynb
@@ -360,7 +360,7 @@
     "                                        reduce_by={\"group\", \"name\"},\n",
     "                                        approach=\"moving_centers\",\n",
     "                                        log_level=logging.ERROR)[mask]\n",
-    "        timestep = timestep[mask]\n",
+    "        timestep = timestep[mask] - 0.1\n",
     "        data = np.hstack([\n",
     "                        timestep.reshape((-1,1)), \n",
     "                        radial_dist_1.reshape((-1,1)), \n",
