--- a/docs/source/theory/geometrics/longitudinal_length.ipynb
+++ b/docs/source/theory/geometrics/longitudinal_length.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -79,101 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = lv_typeA.create_speckles(\n",
-    "            collection=\"SAMPLE\",\n",
-    "            group=\"epi\",\n",
-    "            name=\"SAMPLE-LONG\",\n",
-    "            from_nodeset=LV_SURFS.EPI,\n",
-    "            exclude_nodeset=[LV_SURFS.BASE, LV_SURFS.ENDO],\n",
-    "            d=2.5,\n",
-    "            k=0.5,\n",
-    "            normal_to=[1.0,0.0,0.0],\n",
-    "            n_subsets=6,\n",
-    "            subsets_criteria=\"z2\",\n",
-    "            cluster_criteria=\"z2\",\n",
-    "            n_clusters=4,\n",
-    "            t=0.0,\n",
-    "            kmin=-1,\n",
-    "            kmax=0.85,\n",
-    "            log_level=logging.WARN,\n",
-    "        )\n",
-    "\n",
-    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"SAMPLE-LONG\", spk_group=\"epi\", spk_collection=\"SAMPLE\")\n",
-    "lv_typeA.plot_speckles(sample_spk_typeA[2], \n",
-    "                       cmap=\"jet\", \n",
-    "                        point_size=200,\n",
-    "                       add_k_centers=False, \n",
-    "                       k_centers_as_line=True, \n",
-    "                       k_bins=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = lv_typeA.create_speckles(\n",
-    "            collection=\"SAMPLE\",\n",
-    "            group=\"epi\",\n",
-    "            name=\"SAMPLE-LONG\",\n",
-    "            from_nodeset=LV_SURFS.EPI,\n",
-    "            exclude_nodeset=[LV_SURFS.BASE, LV_SURFS.ENDO],\n",
-    "            d=2.5,\n",
-    "            k=0.5,\n",
-    "            normal_to=[1.0,0.0,0.0],\n",
-    "            n_subsets=6,\n",
-    "            subsets_criteria=\"z2\",\n",
-    "            cluster_criteria=\"z2\",\n",
-    "            n_clusters=4,\n",
-    "            t=0.0,\n",
-    "            kmin=-1,\n",
-    "            kmax=0.85,\n",
-    "            log_level=logging.WARN,\n",
-    "        )\n",
-    "\n",
-    "from project_heart.utils.vector_utils import *\n",
-    "spk = sample_spk_typeA[2]\n",
-    "lv_typeA.plot_speckles(spk, \n",
-    "                       cmap=None,\n",
-    "                       color=\"blue\",\n",
-    "                       point_size=150,\n",
-    "                       add_k_centers=False, \n",
-    "                       k_centers_as_line=True, \n",
-    "                       k_bins=False,\n",
-    "                       )\n",
-    "\n",
-    "pts = lv_typeA.points(mask=spk.ids)\n",
-    "\n",
-    "plane_normal, plane_d = fit_plane(pts)\n",
-    "ppts = project_pts_onto_plane(pts, plane_normal, plane_d)\n",
-    "p_center = project_pts_onto_plane(spk.center, plane_normal, plane_d)\n",
-    "vecs = ppts - p_center \n",
-    "angles = angle_between(vecs, lv_typeA._X, check_orientation=True)\n",
-    "min_a, max_a = np.min(angles), np.max(angles)\n",
-    "bins = np.digitize(\n",
-    "    angles, np.linspace(min_a*0.999, max_a*1.001, 4+1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b4a8f87bb5e4d039a8a181599af65c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"SAMPLE-LONG\", spk_group=\"epi\", spk_collection=\"SAMPLE\")\n",
-    "lv_typeA.plot_speckles(sample_spk_typeA[0], \n",
+    "lv_typeA.plot_speckles(sample_spk_typeA[4], \n",
     "                       cmap=\"jet\", \n",
     "                        point_size=200,\n",
     "                       add_k_centers=True, \n",
