fix speckles angles3

--- a/docs/source/theory/geometrics/longitudinal_length.ipynb
+++ b/docs/source/theory/geometrics/longitudinal_length.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Longitudinal Distance"
+    "## Longitudinal Length"
    ]
   },
   {
@@ -51,12 +51,14 @@
    "source": [
     "**Definition**: Curvature length from a set of points roughtly alinged in a plane normal to longitudinal axis.\n",
     "\n",
-    "..."
+    "The longitudinal length is computed as the length of a curve inscribed within a region of the myocardium along the longitudinal axis. In our implementation, we created these curves based on specified speckles, therefore, we are essentially computing the \"speckle length\". It is important to note that the normal of the plane of reference for these speckles must be perpendicular to the longitudinal axis to ensure this metric is aligned with its definition. \n",
+    "\n",
+    "Here is an example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,27 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_ideal.plot_speckles(sample_spk_ideal[4], \n",
-    "                       cmap=\"Set1\", \n",
-    "                        point_size=200,\n",
-    "                       add_k_centers=True, \n",
-    "                       k_centers_as_line=True, \n",
-    "                       k_bins=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b4a8f87bb5e4d039a8a181599af65c0",
+       "model_id": "a05a686c3b324e76acba92ce12c7bf7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,13 +86,20 @@
     }
    ],
    "source": [
-    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"SAMPLE-LONG\", spk_group=\"epi\", spk_collection=\"SAMPLE\")\n",
-    "lv_typeA.plot_speckles(sample_spk_typeA[4], \n",
-    "                       cmap=\"jet\", \n",
+    "lv_ideal.plot_speckles(sample_spk_ideal[0], \n",
+    "                       cmap=\"tab20\", \n",
     "                        point_size=200,\n",
     "                       add_k_centers=True, \n",
     "                       k_centers_as_line=True, \n",
-    "                       k_bins=True)"
+    "                       k_bins=True,\n",
+    "                       t=0.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this, we can see that the speckle length will change according to the timestep, however, the reference in which length is computed will not change:"
    ]
   },
   {
@@ -113,44 +108,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from project_heart.utils.vector_utils import angle_between\n",
-    "angle_y = angle_between(np.cross(lv_ideal._Z, [1,0,0])[:2], lv_ideal._Y[:2], check_orientation=False)\n",
-    "angle_y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_ideal.plot_speckles(sample_spk_ideal, \n",
-    "                       cmap=\"jet\", \n",
-    "                        point_size=200,\n",
-    "                       add_k_centers=False, \n",
-    "                       k_centers_as_line=False, \n",
-    "                       k_bins=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv_typeA.plot_speckles(sample_spk_typeA[3], \n",
-    "                       cmap=\"Set1\", \n",
+    "lv_ideal.plot_speckles(sample_spk_ideal[0], \n",
+    "                       cmap=\"tab20\", \n",
     "                        point_size=200,\n",
     "                       add_k_centers=True, \n",
     "                       k_centers_as_line=True, \n",
-    "                       k_bins=True)"
+    "                       k_bins=True,\n",
+    "                       t=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Global longitudinal speckle:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the computation of local speckles is"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ba46bc9606b41c69ebe28d423a31b63",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"1\", spk_group=\"epi\", spk_collection=\"long-6\")\n",
+    "lv_typeA.plot_speckles(sample_spk_typeA, \n",
+    "                       cmap=\"jet\", \n",
+    "                        point_size=200,\n",
+    "                       add_k_centers=True, \n",
+    "                    #    k_centers_as_line=True, \n",
+    "                       k_bins=True,\n",
+    "                       )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58b187cd7d6148ccaccef4afbddf13f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"4\", spk_group=\"epi\", spk_collection=\"long-1\")\n",
+    "lv_typeA.plot_speckles(sample_spk_typeA, \n",
+    "                       cmap=\"jet\", \n",
+    "                        point_size=200,\n",
+    "                       add_k_centers=True, \n",
+    "                        #k_centers_as_line=True, \n",
+    "                       k_bins=True,\n",
+    "                       )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "long_spks = lv_typeA.get_speckles(spk_collection=\"long-6\")\n",
+    "lv_typeA.longitudinal_length(long_spks, approach=\"k_ids\", recompute=True)\n",
+    "lv_typeA.plot_metric(lv_typeA.STATES.LONG_LENGTH, \n",
+    "    from_ts=0.0,\n",
+    "    plot_infos=[\"group\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"1\", spk_group=\"epi\", spk_collection=\"long-6\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "long_spks = lv_typeA.get_speckles(spk_collection=\"long-6\")\n",
+    "lv_typeA.global_longitudinal_length(long_spks, approach=\"k_ids\", recompute=True)\n",
+    "lv_typeA.plot_metric(lv_typeA.STATES.LONG_LENGTH, \n",
+    "    from_ts=0.0,\n",
+    "    plot_infos=[\"group\"])"
    ]
   }
  ],
