minor fix on circ length and added docs

--- a/docs/source/theory/geometrics/circumferential_length.ipynb
+++ b/docs/source/theory/geometrics/circumferential_length.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv_ideal.plot_speckles(sample_spk_ideal[0], \n",
+    "lv_ideal.plot_speckles(sample_spk_ideal[-1], \n",
     "                       cmap=\"tab20\", \n",
     "                        point_size=200,\n",
     "                       add_k_centers=True, \n",
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv_ideal.plot_speckles(sample_spk_ideal[0], \n",
+    "lv_ideal.plot_speckles(sample_spk_ideal[-1], \n",
     "                       cmap=\"tab20\", \n",
     "                        point_size=200,\n",
     "                       add_k_centers=True, \n",
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our approach, the final computation of 'longitudinal length' is the result of the reduction of the sum of the reduced values of individual groups formed by 'group' and 'name', which essentially composes the target line for the given geometric metric. \n",
+    "Similarly to 'longitudinal length, the final computation of 'circumferential length' is the result of the reduction of the sum of the reduced values of individual groups formed by 'group' and 'name', which essentially composes the target line for the given geometric metric. \n",
     "\n",
     "For instance, this is a sample group formed by speckles' 'group' and 'name' values:"
    ]
@@ -145,6 +145,7 @@
    "outputs": [],
    "source": [
     "sample_spk_ideal = lv_ideal.get_speckles(spk_name=\"SAMPLE\", spk_group=\"epi\", spk_collection=\"SAMPLE\")\n",
+    "\n",
     "lv_ideal.plot_speckles(sample_spk_ideal, \n",
     "                       cmap=\"tab20\", \n",
     "                        point_size=200,\n",
@@ -193,19 +194,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_spks = lv_typeA.get_speckles(spk_collection=\"circ-6\")\n",
-    "lv_typeA.longitudinal_length(\n",
+    "long_spks = lv_ideal.get_speckles(spk_collection=\"circ-6\")\n",
+    "lv_ideal.longitudinal_length(\n",
     "    long_spks, \n",
     "    approach=\"k_ids\", \n",
     "    recompute=True,\n",
-    "    reduce_by={\"name\"},\n",
+    "    reduce_by={\"group\", \"name\"},\n",
     "    log_level=logging.WARN,\n",
     "    )\n",
-    "lv_typeA.plot_metric(lv_typeA.STATES.LONG_LENGTH, \n",
+    "lv_ideal.plot_metric(lv_ideal.STATES.LONG_LENGTH, \n",
     "    from_ts=0.0,\n",
-    "    plot_infos={\"name\"},\n",
-    "    plot_infos_only=True,\n",
-    "    plot_infos_only_on_info_plots=True\n",
+    "    plot_infos={\"group\", \"name\"},\n",
+    "    plot_infos_only=False,\n",
+    "    # plot_infos_only_on_info_plots=True\n",
     "    )"
    ]
   },
@@ -216,7 +217,7 @@
     "TODO: \n",
     "\n",
     "* add reduction by subset and group (will result in same similar graph but with individual values for endo-epi) \n",
-    "* add option to save 'longitudinal length' as the reduction of subsets, instead of sum (might be useful for detailed explanations)"
+    "* add option to save 'circumferential length' as the reduction of subsets, instead of sum (might be useful for detailed explanations)"
    ]
   },
   {
@@ -230,9 +231,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As previously explained, discontinuities between cluster centers within speckle subsets might lead to errors when computing the overall length of the desired curve. Although this error is reduced with finer meshes and increase number of clusters within speckles, we considered the concept of \"global longitudinal speckle\" as a separated method for clarity purposes. \n",
+    "As previously stated, discontinuities between cluster centers within speckle subsets might cause inaccuracies in calculating the total length of the required curve. While finer meshes and an increase in the number of clusters among speckles lessen this inaccuracy, we explored the notion of \"global longitudinal speckle\" as a separate technique for clarity and extended usage.\n",
     "\n",
-    "The global longitudinal length is defined as the length over an entire speckle and it is intended to be used with speckles that do not contain subsets. Essentially, we apply the previously described method for length computation over a single speckle that covers the entire region of interest. The final result is the reduction of all selected speckles. See example below:"
+    "The global longitudinal length is defined as the length across the whole speckle and is meant for usage with speckles that do not contain subsets. In essence, we use the previously mentioned approach to compute length over a single speckle that covers the entire region of interest. The end effect is that all selected speckles are reduced while keeping consistency wihtin speckles (without discontinuities induced by subsets). Consider the following example:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: fix visualization (join ends on circ lines)"
    ]
   },
   {
@@ -241,8 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"0.0\", spk_group=\"epi\", spk_collection=\"long-1\")\n",
-    "lv_typeA.plot_speckles(sample_spk_typeA, \n",
+    "sample_spk_typeA = lv_ideal.get_speckles(spk_name=\"base\", spk_group=\"epi\", spk_collection=\"circ-1\")\n",
+    "lv_ideal.plot_speckles(sample_spk_typeA, \n",
     "                       cmap=\"hot\", \n",
     "                        point_size=200,\n",
     "                        add_k_centers=True, \n",
@@ -270,21 +278,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "long_spks = lv_typeA.get_speckles(spk_collection=\"long-1\")\n",
-    "lv_typeA.global_longitudinal_length(\n",
+    "long_spks = lv_ideal.get_speckles(spk_collection=\"circ-1\")\n",
+    "lv_ideal.global_circumferential_length(\n",
     "    long_spks, \n",
     "    approach=\"k_ids\", \n",
     "    recompute=True,\n",
     "    reduce_by={\"group\"},\n",
     "    log_level=logging.WARN,\n",
-    "    line_seg_filter_kwargs=dict(\n",
-    "                           mfilter_ws=3, \n",
-    "                           sfilter_ws=9, \n",
-    "                           sfilter_or=1, \n",
-    "                           keep_first=True, \n",
-    "                           keep_last=True)\n",
+    "    # line_seg_filter_kwargs=dict(\n",
+    "    #                        mfilter_ws=3, \n",
+    "    #                        sfilter_ws=9, \n",
+    "    #                        sfilter_or=1, \n",
+    "    #                        keep_first=True, \n",
+    "    #                        keep_last=True)\n",
     "    )\n",
-    "lv_typeA.plot_metric(lv_typeA.STATES.GLOBAL_LONGITUDINAL_LENGTH, \n",
+    "lv_ideal.plot_metric(lv_ideal.STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH, \n",
     "    from_ts=0.0,\n",
     "    plot_infos=[\"group\"])"
    ]
